--- a/Entitlements.plist
+++ b/Entitlements.plist
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<!--
-   Entitlements.plist
-   CarPlay Demo
-
-   Created by Bipin Butala on 6/29/22.
-   Copyright (c) 2022 ___ORGANIZATIONNAME___. All rights reserved.
--->
 <plist version="1.0">
-<dict/>
+<dict>
+	<key>com.apple.developer.playable-content</key>
+	<true/>
+</dict>
 </plist>
